@@ -23,13 +23,13 @@ import java.util.Arrays;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.alfresco.model.ContentModel;
 import org.alfresco.repo.batch.BatchProcessWorkProvider;
@@ -54,6 +54,7 @@ import org.apache.commons.logging.LogFactory;
 import org.json.JSONObject;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.extensions.surf.util.I18NUtil;
 import org.springframework.stereotype.Service;
 
@@ -64,6 +65,7 @@ import fr.becpg.model.ECMGroup;
 import fr.becpg.model.ECMModel;
 import fr.becpg.model.MPMModel;
 import fr.becpg.model.PLMModel;
+import fr.becpg.model.SystemState;
 import fr.becpg.repo.RepoConsts;
 import fr.becpg.repo.activity.EntityActivityService;
 import fr.becpg.repo.batch.BatchClosingHook;
@@ -83,6 +85,7 @@ import fr.becpg.repo.ecm.data.dataList.ChangeUnitDataItem;
 import fr.becpg.repo.ecm.data.dataList.ReplacementListDataItem;
 import fr.becpg.repo.ecm.data.dataList.SimulationListDataItem;
 import fr.becpg.repo.ecm.data.dataList.WUsedListDataItem;
+import fr.becpg.repo.entity.datalist.WUsedFilter;
 import fr.becpg.repo.entity.datalist.WUsedListService;
 import fr.becpg.repo.entity.datalist.WUsedListService.WUsedOperator;
 import fr.becpg.repo.entity.datalist.data.MultiLevelListData;
@@ -99,6 +102,7 @@ import fr.becpg.repo.product.data.productList.CompoListDataItem;
 import fr.becpg.repo.product.data.productList.DynamicCharactListItem;
 import fr.becpg.repo.product.data.productList.IngLabelingListDataItem;
 import fr.becpg.repo.product.data.productList.LabelClaimListDataItem;
+import fr.becpg.repo.product.data.productList.LabelingRuleListDataItem;
 import fr.becpg.repo.product.data.productList.ReqCtrlListDataItem;
 import fr.becpg.repo.repository.AlfrescoRepository;
 import fr.becpg.repo.repository.L2CacheSupport;
@@ -108,6 +112,7 @@ import fr.becpg.repo.repository.model.EffectiveDataItem;
 import fr.becpg.repo.repository.model.SimpleCharactDataItem;
 import fr.becpg.repo.security.BeCPGAccessDeniedException;
 import fr.becpg.repo.security.SecurityService;
+import fr.becpg.repo.system.SystemConfigurationService;
 
 /**
  * Engineering change order service implementation
@@ -158,6 +163,12 @@ public class ECOServiceImpl implements ECOService {
 	
 	@Autowired
 	private EntityActivityService entityActivityService;
+	
+	@Autowired
+	private SystemConfigurationService systemConfigurationService;
+	
+	@Value("${beCPG.eco.impactwused.states}")
+	private String impactWUsedStates;
 
 	/** {@inheritDoc} */
 	@Override
@@ -188,10 +199,9 @@ public class ECOServiceImpl implements ECOService {
 
 			BatchInfo batchInfo = new BatchInfo(String.format(isSimulated ? "simulateECO-%s" : "applyECO-%s", ecoNodeRef.getId()),
 					isSimulated ? "becpg.batch.eco.simulate" : "becpg.batch.eco.apply", entityDescription);
+			batchInfo.setRunAsSystem(true);
 			
 			batchInfo.setWorkerThreads(1);
-			
-			batchInfo.setRunAsSystem(true);
 			
 			if (notifyByMail) {
 				batchInfo.enableNotifyByMail(isSimulated ? "eco.simulate" : "eco.apply", String.format(ACTION_URL_PREFIX, ecoNodeRef.toString()));
@@ -201,8 +211,10 @@ public class ECOServiceImpl implements ECOService {
 			
 			BatchClosingHook closingHook = null;
 			
-			if (calculateWUsed) {
-				batchStepList.add(createCalculateWUsedListBatchStep(ecoData, true));
+			boolean applyToAll = Boolean.TRUE.equals(ecoData.getApplyToAll()) && !isSimulated;
+			
+			if (calculateWUsed || applyToAll) {
+				batchStepList.add(createCalculateWUsedListBatchStep(ecoData, true, applyToAll));
 			}
 			
 			if (isSimulated) {
@@ -330,7 +342,8 @@ public class ECOServiceImpl implements ECOService {
 	private BatchStep<Object> createApplyECOStep(ChangeOrderData ecoData, boolean deleteOnApply) {
 		
 		BatchStep<Object> applyStep = new BatchStep<>();
-	
+		applyStep.setRunAsSystem(false);
+		
 		ApplyECOProcessWorker processWorker = new ApplyECOProcessWorker(ecoData);
 		
 		applyStep.setProcessWorker(processWorker);
@@ -402,9 +415,8 @@ public class ECOServiceImpl implements ECOService {
 				
 				if (entry instanceof NodeRef && nodeService.hasAspect((NodeRef) entry, ECMModel.ASPECT_CHANGE_ORDER)) {
 					
-					nodeService.removeAspect((NodeRef) entry, ECMModel.ASPECT_CHANGE_ORDER);
-					
 					lockService.unlock((NodeRef) entry);
+					nodeService.removeAspect((NodeRef) entry, ECMModel.ASPECT_CHANGE_ORDER);
 					
 					if (logger.isDebugEnabled()) {
 						String name = (String) nodeService.getProperty((NodeRef) entry, ContentModel.PROP_NAME);
@@ -711,6 +723,10 @@ public class ECOServiceImpl implements ECOService {
 							applyReplacementList(ecoData, productToFormulateData, isSimulation, isMergeItem);
 						}
 						
+						if (!isMergeItem) {
+							applyLabelingReplacements(ecoData, productToFormulateData);
+						}
+						
 						if (isMergeItem && isSimulation) {
 							
 							logger.debug("Merge finding corresponding branch...");
@@ -821,22 +837,19 @@ public class ECOServiceImpl implements ECOService {
 
 	}
 	
-	private BatchStep<Object> createCalculateWUsedListBatchStep(ChangeOrderData ecoData, boolean isWUsedImpacted) {
+	private BatchStep<Object> createCalculateWUsedListBatchStep(ChangeOrderData ecoData, boolean isWUsedImpacted, boolean applyToAll) {
 		BatchStep<Object> batchStep = new BatchStep<>();
 		
 		BatchProcessor.BatchProcessWorkerAdaptor<Object> processWorker = new BatchProcessor.BatchProcessWorkerAdaptor<Object>() {
 
 			@Override
 			public void process(Object entry) throws Throwable {
-				
-				internalCalculateWUsedList(ecoData, isWUsedImpacted);
+				internalCalculateWUsedList(ecoData, isWUsedImpacted, applyToAll);
 			}
 		};
 		
 		batchStep.setProcessWorker(processWorker);
-		
 		batchStep.setWorkProvider(new EntityListBatchProcessWorkProvider<>(Arrays.asList(ecoData)));
-		
 		batchStep.setBatchStepListener(new BatchStepAdapter() {
 			
 			@Override
@@ -855,12 +868,9 @@ public class ECOServiceImpl implements ECOService {
 			
 			@Override
 			public void onError(String lastErrorEntryId, String lastError) {
-
 				if (!ECOState.InError.equals(ecoData.getEcoState())) {
 					ecoData.setEcoState(ECOState.InError);
-
 					commentService.createComment(ecoData.getNodeRef(), "", "Error during OM calculating of WUsed: " + lastError, false);
-
 					alfrescoRepository.save(ecoData);
 				}
 			}
@@ -880,7 +890,6 @@ public class ECOServiceImpl implements ECOService {
 			String entityDescription = nodeService.getProperty(ecoNodeRef, BeCPGModel.PROP_CODE) + " - " + nodeService.getProperty(ecoNodeRef, ContentModel.PROP_NAME);
 			
 			BatchInfo batchInfo = new BatchInfo(String.format("calculateWUsed-%s", ecoNodeRef.getId()), "becpg.batch.eco.calculateWUsed", entityDescription);
-			
 			batchInfo.setRunAsSystem(true);
 			
 			if (notifyByMail) {
@@ -889,7 +898,7 @@ public class ECOServiceImpl implements ECOService {
 			
 			List<BatchStep<Object>> batchStepList = new LinkedList<>();
 			
-			batchStepList.add(createCalculateWUsedListBatchStep(ecoData, isWUsedImpacted));
+			batchStepList.add(createCalculateWUsedListBatchStep(ecoData, isWUsedImpacted, false));
 			
 			batchQueueService.queueBatch(batchInfo, batchStepList);
 			
@@ -908,7 +917,6 @@ public class ECOServiceImpl implements ECOService {
 		String entityDescription = nodeService.getProperty(ecoNodeRef, BeCPGModel.PROP_CODE) + " - " + nodeService.getProperty(ecoNodeRef, ContentModel.PROP_NAME);
 
 		BatchInfo closingBatchInfo = new BatchInfo(String.format("closeECO-%s", ecoNodeRef.getId()), "becpg.batch.eco.close", entityDescription);
-		
 		closingBatchInfo.setRunAsSystem(true);
 		
 		List<BatchStep<Object>> closingBatchStepList = new LinkedList<>();
@@ -924,7 +932,7 @@ public class ECOServiceImpl implements ECOService {
 		return null;
 	}
 
-	private void internalCalculateWUsedList(ChangeOrderData ecoData, boolean isWUsedImpacted) {
+	private void internalCalculateWUsedList(ChangeOrderData ecoData, boolean isWUsedImpacted, boolean applyToAll) {
 		logger.debug("calculateWUsedList");
 
 		// clear WUsedList
@@ -934,32 +942,53 @@ public class ECOServiceImpl implements ECOService {
 		if (ecoData.getReplacementList() != null) {
 
 			int sort = 1;
-
+			
 			for (ReplacementListDataItem replacementListDataItem : ecoData.getReplacementList()) {
-
+				
 				List<NodeRef> replacements = getSourceItems(ecoData, replacementListDataItem);
-
+				
 				if ((replacements != null) && !replacements.isEmpty()) {
-
+					
 					WUsedListDataItem parent = new WUsedListDataItem();
 					parent.setSourceItems(replacements);
 					parent.setIsWUsedImpacted(true);
 					parent.setDepthLevel(1);
 					parent.setSort(sort++);
 					parent.setTargetItem(replacementListDataItem.getTargetItem());
-
+					
 					ecoData.getWUsedList().add(parent);
-
+					
 					List<QName> associationQNames = evaluateWUsedAssociations(replacements);
-
+					
+					WUsedFilter filter = null;
+					
+					List<String> wUsedStatesList = getWUsedStates(ecoData);
+					filter = new WUsedFilter() {
+						@Override
+						public WUsedFilterKind getFilterKind() {
+							return WUsedFilterKind.STANDARD;
+						}
+						@Override
+						public void filter(MultiLevelListData wUsedData) {
+							for (Iterator<Entry<NodeRef, MultiLevelListData>> iterator = wUsedData.getTree().entrySet().iterator(); iterator
+									.hasNext();) {
+								Entry<NodeRef, MultiLevelListData> entry = iterator.next();
+								NodeRef nodeRef = entry.getValue().getEntityNodeRef();
+								String productState = (String) nodeService.getProperty(nodeRef, PLMModel.PROP_PRODUCT_STATE);
+								if (!wUsedStatesList.contains(productState)) {
+									iterator.remove();
+								}
+							}
+						}
+					};
+					
 					for (QName associationQName : associationQNames) {
-
-						MultiLevelListData wUsedData = wUsedListService.getWUsedEntity(replacements, WUsedOperator.AND, associationQName,
+						MultiLevelListData wUsedData = wUsedListService.getWUsedEntity(replacements, WUsedOperator.AND, filter, associationQName,
 								RepoConsts.MAX_DEPTH_LEVEL);
-
+						
 						QName datalistQName = evaluateListFromAssociation(associationQName);
 						sort = calculateWUsedList(ecoData, wUsedData, datalistQName, parent,
-								ChangeOrderType.Merge.equals(ecoData.getEcoType()) || isWUsedImpacted, sort, replacementListDataItem.getTargetItem());
+								ChangeOrderType.Merge.equals(ecoData.getEcoType()) || isWUsedImpacted, sort, replacementListDataItem.getTargetItem(), applyToAll);
 					}
 				}
 			}
@@ -967,6 +996,13 @@ public class ECOServiceImpl implements ECOService {
 
 		alfrescoRepository.save(ecoData);
 
+	}
+
+	private List<String> getWUsedStates(ChangeOrderData ecoData) {
+		if (ChangeOrderType.ImpactWUsed.equals(ecoData.getEcoType())) {
+			return Arrays.stream(impactWUsedStates.split(",")).toList();
+		}
+		return List.of(SystemState.Simulation.toString(), SystemState.ToValidate.toString(), SystemState.Valid.toString());
 	}
 	
 	private List<NodeRef> getSourceItems(ChangeOrderData ecoData, ReplacementListDataItem replacementListDataItem) {
@@ -997,7 +1033,7 @@ public class ECOServiceImpl implements ECOService {
 	}
 
 	private int calculateWUsedList(ChangeOrderData ecoData, MultiLevelListData wUsedData, QName dataListQName, WUsedListDataItem parent,
-			boolean isWUsedImpacted, int sort, NodeRef targetItem) {
+			boolean isWUsedImpacted, int sort, NodeRef targetItem, boolean applyToAll) {
 
 		List<NodeRef> sortedKeys = new ArrayList<>(wUsedData.getTree().keySet());
 		
@@ -1013,24 +1049,31 @@ public class ECOServiceImpl implements ECOService {
 			
 		});
 		
+		int maxEcoWUsedSize = maxEcoWUsedSize();
+		
 		for (NodeRef key : sortedKeys) {
 			
-			WUsedListDataItem wUsedListDataItem = new WUsedListDataItem();
-			wUsedListDataItem.setLink(key);
-			wUsedListDataItem.setParent(parent);
-			wUsedListDataItem.setImpactedDataList(dataListQName);
-			wUsedListDataItem.setIsWUsedImpacted(isWUsedImpacted);
-			wUsedListDataItem.setSourceItems(wUsedData.getTree().get(key).getEntityNodeRefs());
-			wUsedListDataItem.setSort(sort++);
-			wUsedListDataItem.setTargetItem(targetItem);
+			if (applyToAll || ecoData.getWUsedList().size() < maxEcoWUsedSize) {
+				WUsedListDataItem wUsedListDataItem = new WUsedListDataItem();
+				wUsedListDataItem.setLink(key);
+				wUsedListDataItem.setParent(parent);
+				wUsedListDataItem.setImpactedDataList(dataListQName);
+				wUsedListDataItem.setIsWUsedImpacted(isWUsedImpacted || applyToAll);
+				wUsedListDataItem.setSourceItems(wUsedData.getTree().get(key).getEntityNodeRefs());
+				wUsedListDataItem.setSort(sort++);
+				wUsedListDataItem.setTargetItem(targetItem);
 
-			ecoData.getWUsedList().add(wUsedListDataItem);
-
-			// recursive
-			sort = calculateWUsedList(ecoData, wUsedData.getTree().get(key), dataListQName, wUsedListDataItem, isWUsedImpacted, sort, targetItem);
+				ecoData.getWUsedList().add(wUsedListDataItem);
+				// recursive
+				sort = calculateWUsedList(ecoData, wUsedData.getTree().get(key), dataListQName, wUsedListDataItem, isWUsedImpacted, sort, targetItem, applyToAll);
+			}
 		}
 
 		return sort;
+	}
+
+	private int maxEcoWUsedSize() {
+		return Integer.parseInt(systemConfigurationService.confValue("beCPG.eco.max.wused.size"));
 	}
 
 	private ChangeUnitDataItem getOrCreateChangeUnitDataItem(ChangeOrderData ecoData, WUsedListDataItem data) {
@@ -1131,7 +1174,23 @@ public class ECOServiceImpl implements ECOService {
 				}
 			}
 		}
+	}
 
+	private void applyLabelingReplacements(ChangeOrderData ecoData, ProductData product) {
+		if (product.getLabelingListView() != null && product.getLabelingListView().getLabelingRuleList() != null) {
+			for (LabelingRuleListDataItem labelingRuleListDataItem : product.getLabelingListView().getLabelingRuleList()) {
+				for (ReplacementListDataItem rep : ecoData.getReplacementList()) {
+					for (NodeRef sourceItem : rep.getSourceItems()) {
+						if (labelingRuleListDataItem.getComponents() != null && labelingRuleListDataItem.getComponents().contains(sourceItem)) {
+							labelingRuleListDataItem.getComponents().remove(sourceItem);
+							if (!labelingRuleListDataItem.getComponents().contains(rep.getTargetItem())) {
+								labelingRuleListDataItem.getComponents().add(rep.getTargetItem());
+							}
+						}
+					}
+				}
+			}
+		}
 	}
 
 	private void merge(ChangeOrderData ecoData) {
@@ -1210,7 +1269,7 @@ public class ECOServiceImpl implements ECOService {
 				if (filter.createPredicate(productData).test(item)) {
 
 					
-					List<ReplacementListDataItem> itemReplacements = ecoData.getReplacementList().stream().filter(remp -> getSourceItems(ecoData, remp).contains(item.getComponent())).collect(Collectors.toList());
+					List<ReplacementListDataItem> itemReplacements = ecoData.getReplacementList().stream().filter(remp -> getSourceItems(ecoData, remp).contains(item.getComponent())).toList();
 					
 					if (!itemReplacements.isEmpty()) {
 						
