@@ -4,7 +4,6 @@ import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.alfresco.service.cmr.repository.MLText;
@@ -52,12 +51,21 @@ public class AllergenRequirementScanner extends AbstractRequirementScanner<Aller
 
 							if (!isAllergenAllowed || Boolean.TRUE.equals(addInfoReqCtrl)) {
 								MLText message = MLTextHelper.getI18NMessage(MESSAGE_FORBIDDEN_ALLERGEN, extractName(listDataItem.getAllergen()));
-
+								
+								RequirementType reqType= isAllergenAllowed ? RequirementType.Info : RequirementType.Forbidden;
+								
+								if (!isAllergenAllowed && specDataItem.getRegulatoryType() != null) {
+									reqType = specDataItem.getRegulatoryType();
+								}
+								if (specDataItem.getRegulatoryMessage() != null) {
+									message = specDataItem.getRegulatoryMessage();
+								}
+								
 								ReqCtrlListDataItem rclDataItem = ReqCtrlListDataItem.build()
-										.ofType(isAllergenAllowed ? RequirementType.Info : RequirementType.Forbidden).withMessage(message)
+										.ofType(reqType).withMessage(message)
 										.withCharact(listDataItem.getAllergen()).ofDataType(RequirementDataType.Specification)
 										.withSources(Stream.of(listDataItem.getVoluntarySources(), listDataItem.getInVoluntarySources())
-												.flatMap(List::stream).distinct().collect(Collectors.toList()))
+												.flatMap(List::stream).distinct().toList())
 										.withRegulatoryCode(extractRegulatoryId(specDataItem, specification));
 
 								ret.add(rclDataItem);
